--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 db.sqlite3
 photozero/settings/local.py
 photozero/old_settings.py
-photozero.sublime-project
-photozero.sublime-workspace
+photozero-basic.sublime-project
+photozero-basic.sublime-workspace
 mediafiles/
 
 # Byte-compiled / optimized / DLL files
